--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Lab-01\" data-toc-modified-id=\"Lab-01-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Lab 01</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Lab-Walk-Through\" data-toc-modified-id=\"Lab-Walk-Through-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>Lab Walk-Through</a></span></li><li><span><a href=\"#Collaboration-Policy\" data-toc-modified-id=\"Collaboration-Policy-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Collaboration Policy</a></span></li></ul></li><li><span><a href=\"#Part-1:-Jupyter-Tips\" data-toc-modified-id=\"Part-1:-Jupyter-Tips-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Part 1: Jupyter Tips</a></span><ul class=\"toc-item\"><li><span><a href=\"#Viewing-Documentation\" data-toc-modified-id=\"Viewing-Documentation-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Viewing Documentation</a></span></li><li><span><a href=\"#Importing-Libraries-and-Magic-Commands\" data-toc-modified-id=\"Importing-Libraries-and-Magic-Commands-1.1.2\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>Importing Libraries and Magic Commands</a></span></li><li><span><a href=\"#Keyboard-Shortcuts\" data-toc-modified-id=\"Keyboard-Shortcuts-1.1.3\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>Keyboard Shortcuts</a></span></li></ul></li><li><span><a href=\"#Part-2:-Prerequisites\" data-toc-modified-id=\"Part-2:-Prerequisites-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Part 2: Prerequisites</a></span><ul class=\"toc-item\"><li><span><a href=\"#Python\" data-toc-modified-id=\"Python-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>Python</a></span></li><li><span><a href=\"#NumPy\" data-toc-modified-id=\"NumPy-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>NumPy</a></span></li><li><span><a href=\"#Question-1\" data-toc-modified-id=\"Question-1-1.2.3\"><span class=\"toc-item-num\">1.2.3&nbsp;&nbsp;</span>Question 1</a></span></li><li><span><a href=\"#Question-2\" data-toc-modified-id=\"Question-2-1.2.4\"><span class=\"toc-item-num\">1.2.4&nbsp;&nbsp;</span>Question 2</a></span><ul class=\"toc-item\"><li><span><a href=\"#Question-2a\" data-toc-modified-id=\"Question-2a-1.2.4.1\"><span class=\"toc-item-num\">1.2.4.1&nbsp;&nbsp;</span>Question 2a</a></span></li><li><span><a href=\"#Question-2b\" data-toc-modified-id=\"Question-2b-1.2.4.2\"><span class=\"toc-item-num\">1.2.4.2&nbsp;&nbsp;</span>Question 2b</a></span></li><li><span><a href=\"#Question-2c\" data-toc-modified-id=\"Question-2c-1.2.4.3\"><span class=\"toc-item-num\">1.2.4.3&nbsp;&nbsp;</span>Question 2c</a></span></li><li><span><a href=\"#Question-2d\" data-toc-modified-id=\"Question-2d-1.2.4.4\"><span class=\"toc-item-num\">1.2.4.4&nbsp;&nbsp;</span>Question 2d</a></span></li></ul></li></ul></li><li><span><a href=\"#Part-3:-Plotting\" data-toc-modified-id=\"Part-3:-Plotting-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Part 3: Plotting</a></span><ul class=\"toc-item\"><li><span><a href=\"#Question-3\" data-toc-modified-id=\"Question-3-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Question 3</a></span><ul class=\"toc-item\"><li><span><a href=\"#Question-3a\" data-toc-modified-id=\"Question-3a-1.3.1.1\"><span class=\"toc-item-num\">1.3.1.1&nbsp;&nbsp;</span>Question 3a</a></span></li><li><span><a href=\"#Question-3b\" data-toc-modified-id=\"Question-3b-1.3.1.2\"><span class=\"toc-item-num\">1.3.1.2&nbsp;&nbsp;</span>Question 3b</a></span></li><li><span><a href=\"#Question-3c\" data-toc-modified-id=\"Question-3c-1.3.1.3\"><span class=\"toc-item-num\">1.3.1.3&nbsp;&nbsp;</span>Question 3c</a></span></li></ul></li><li><span><a href=\"#Question-4-(Ungraded)\" data-toc-modified-id=\"Question-4-(Ungraded)-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Question 4 (Ungraded)</a></span></li><li><span><a href=\"#Question-5-(Ungraded)\" data-toc-modified-id=\"Question-5-(Ungraded)-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Question 5 (Ungraded)</a></span></li></ul></li><li><span><a href=\"#Submission\" data-toc-modified-id=\"Submission-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Submission</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1090,24 +1100,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.6"
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "156px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": true,
+   "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": true
   }
